# ThesisCode

DdsDatabase/: CMakeLists.txt  README.md
DdsDatabase/src/: Communication.grpc.pb.cc  Communication.grpc.pb.h  Communication.pb.cc  Communication.pb.h  Communication.proto  Controller.cpp  Controller.hpp  Database.cpp  Database.hpp  ListenerDataReader.h  ListenerDataWriter.h  QueryStructure.h  cyclonedds_config_file.xml  main.cpp
DdsDatabase/src/idl/: DatabaseData.idl
kine/: README.md
kine/pkg/commsdb/: setupcomms.go
kine/pkg/drivers/generic/: generic.go  tx.go
kine/pkg/drivers/messagestructures/: kinedata.pb.go  kinedata.proto  kinedata_grpc.pb.go
kine/pkg/drivers/pgsql/: pgsql.go
kine/pkg/logstructured/: logstructured.go
kine/pkg/logstructured/sqllog/: sql.go
kine/pkg/rdpmctsc/: rdpmctsc.s  rdpmctsc_decl.go
kine/pkg/server/: types.go
